Subdivision Surface Modifier causes vertex color map to display a lot of banding in cycles. (Eevee is fine) #78956

Closed
opened 2020-07-15 17:37:16 +02:00 by Leo Mozoloa · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version

Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: 239fbf7d93
Worked: (newest version of Blender that worked as expected)

Short description of error

When applying a subdivision modifier to an object that has a smooth vertex color map, and using this vertex color map as a shader input through an Attribute or Vertex Color Node, the map has a lot of blockiness and banding on the gradients.

Exact steps for others to reproduce the error

Here's a .blend file so you can see directly or here's how I made it:
Vector Map Cycles Banding.blend

  • Create a cube (or keep the default one) and subdivide with 20 cuts in edit mode.
  • Go into vertex paint
  • Set the brush color to black, and fill with Shift + K (This creates a black vertex color map named "Col" on the cube)
  • Grab the Draw tool and set the color to white
  • Draw a big dot on one of the faces
  • Grab the Blur tool and blur the edges so the fall off is really smooth
  • Back to object mode, go into the shading tab
  • Create a material for the cube in the node editor
  • Bring in a Vertex Color node, set the value to Col and plug it into the Base Color of the Principled BSDF
  • Set Specular to 0 on the Principled BSDF to see the effect better
  • Plug a Math node in between the Vertex Node and the Principled BSDF, set to Multiply x 3.000 to see the effect better
  • Add a subdivision surface modifier and set it to at least 3 viewport subdivisions, you can even apply it.

Go into render view and switch between Eevee and cycles and you'll see a very good amount of banding in cycles although everything is smooth in Eevee

Using vertex color maps as wrinkle maps masks on high poly models gives very weird and bandy results in Cycles. It's probably a problem in a lot of other applications.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: `239fbf7d93` Worked: (newest version of Blender that worked as expected) **Short description of error** When **applying a subdivision modifier to an object that has a smooth vertex color map**, and **using this vertex color map as a shader input through an Attribute or Vertex Color Node**, the map has **a lot of blockiness and banding** on the gradients. **Exact steps for others to reproduce the error** Here's a .blend file so you can see directly or here's how I made it: [Vector Map Cycles Banding.blend](https://archive.blender.org/developer/F8697310/Vector_Map_Cycles_Banding.blend) - Create a cube (or keep the default one) and subdivide with 20 cuts in edit mode. - Go into vertex paint - Set the brush color to black, and fill with Shift + K (This creates a black vertex color map named "Col" on the cube) - Grab the Draw tool and set the color to white - Draw a big dot on one of the faces - Grab the Blur tool and blur the edges so the fall off is really smooth - Back to object mode, go into the shading tab - Create a material for the cube in the node editor - Bring in a Vertex Color node, set the value to **Col** and plug it into the Base Color of the Principled BSDF - Set Specular to 0 on the Principled BSDF to see the effect better - Plug a Math node in between the Vertex Node and the Principled BSDF, set to Multiply x 3.000 to see the effect better - **Add a subdivision surface modifier and set it to at least 3 viewport subdivisions**, you can even apply it. # Go into render view and switch between Eevee and cycles and **you'll see a very good amount of banding in cycles** although everything is smooth in Eevee Using vertex color maps as wrinkle maps masks on high poly models gives very weird and bandy results in Cycles. It's probably a problem in a lot of other applications.
Author

Added subscriber: @leomozoloa

Added subscriber: @leomozoloa

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the banding in Cycles, both rendering with CPU or GPU.

I can confirm the banding in Cycles, both rendering with CPU or GPU.

Added subscriber: @Ben100

Added subscriber: @Ben100

This issue was referenced by ec6a9322e8

This issue was referenced by ec6a9322e8723b906089f02ff76b04a7bb7d136f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-11-09 17:41:51 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78956
No description provided.