Fix T78956: banding artifacts of vertex colors in Cycles

Byte colors must be encoded in sRGB and converted to linear on lookup,
to avoid precision loss.